--- a/src/main/resources/templates/admin/log.html
+++ b/src/main/resources/templates/admin/log.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" th:href="@{/plugins/jqgrid/ui.jqgrid-bootstrap.css}">
     <link rel="stylesheet" th:href="@{/plugins/ztree/css/metroStyle/metroStyle.css}">
     <link rel="stylesheet" th:href="@{/css/main.css}">
+    <link rel="stylesheet" th:href="@{/plugins/layDate-v5.0.9/laydate/layui.css}">
+    <title>【日志查询页面】</title>
     <script th:src="@{/libs/jquery.min.js}"></script>
     <script th:src="@{/plugins/layer/layer.js}"></script>
     <script th:src="@{/libs/bootstrap.min.js}"></script>
@@ -16,17 +18,35 @@
     <script th:src="@{/plugins/jqgrid/jquery.jqGrid.min.js}"></script>
     <script th:src="@{/plugins/ztree/jquery.ztree.all.min.js}"></script>
     <script th:src="@{/js/common.js}"></script>
+    <script th:src="@{/plugins/layDate-v5.0.9/laydate/laydate.js}"></script>
+    <style type="text/css">
+          .logDate{
+              width:150px;
+              height:32px;
+              border: 2px solid #337ab7;
+              border-radius: 5px;
+              font-weight: bold;
+          }
+    </style>
 </head>
 <body>
 <div id="rrapp" v-cloak>
     <div>
         <div class="grid-btn">
             <div class="form-group col-sm-2">
-                <input type="text" class="form-control" v-model="q.key" @keyup.enter="query" placeholder="根据用户名,用户操作">
+                <input type="text" class="form-control" v-model="operation"  placeholder="根据用户操作查询">
             </div>
-            <a class="btn btn-primary" @click="blur">条件查询</a>
+            <a class="btn btn-primary" @click="conditionalQuery"><i class="fa fa-search"></i>条件查询</a>
             &nbsp;&nbsp;&nbsp;&nbsp;
-            <a class="btn btn-primary" @click="query">查询全部</a>
+            <a class="btn btn-primary" @click="query"><i class="fa fa-search"></i>查询全部</a>
+            &nbsp;&nbsp;&nbsp;&nbsp;
+            <a class="btn btn-primary" href="/sys/log/export"><i class="fa fa-download"></i>导出报表</a>
+            &nbsp;&nbsp;&nbsp;&nbsp;
+            <input type="text" name="date" class="logDate" id="startDate"  v-model="startDate" placeholder="请选择开始时间">
+            &nbsp;&nbsp;&nbsp;&nbsp;
+            <input type="text" name="date" class="logDate" id="endDate"  v-model="endDate" placeholder="请选择截止时间">
+            &nbsp;&nbsp;&nbsp;&nbsp;
+            <a class="btn btn-primary" @click="dateQuery">时段查询</a>
             <hr style="border:1px solid lightseagreen;border-radius: 5px;"/>
         </div>
         <!-- 查询结果表格-->
@@ -35,6 +55,209 @@
         </table>
     </div>
 </div>
-<script th:src="@{/js/modules/sys/log.js}"></script>
+<script>
+    var vm = new Vue({
+        el:'#rrapp',
+        data:{
+            operation: "",
+            startDate: '',
+            endDate: ''
+        },
+        mounted(){
+            var mountedDate = this;
+            laydate.render({
+                elem: '#startDate',
+                type: 'datetime',
+                // 控件选择完毕后的回调函数
+                done: function(startDate){
+                    mountedDate.startDate=startDate;
+                }
+            });
+            laydate.render({
+                elem: '#endDate',
+                type: 'datetime',
+                done: function(endDate){
+                    mountedDate.endDate=endDate;
+                }
+            });
+        },
+        methods: {
+            query: function (event) {
+                // 使用前端分页插件jqGrid来实现查询.
+                $(function () {
+                    $("#jqGrid").jqGrid({
+                        url: '../sys/log/list',
+                        datatype: "json",
+                        colModel: [
+                            {label: 'id', name: 'id', width: 30, key: true},
+                            {label: '用户名', name: 'username', width: 50},
+                            {label: '用户操作', name: 'operation', width: 70, align: 'center'},
+                            {label: '请求方法', name: 'method', width: 150},
+                            {label: '请求参数', name: 'params', width: 80},
+                            {label: '执行时长(毫秒)', name: 'time', width: 80},
+                            {label: 'IP地址', name: 'ip', width: 70},
+                            {label: '创建时间', name: 'createDate', width: 90}
+                        ],
+                        viewrecords: true,
+                        height: 385,
+                        width: 800,
+                        rowNum: 10,
+                        rowList: [10, 30, 50],
+                        rownumbers: true,
+                        rownumWidth: 25,
+                        autowidth: true,
+                        multiselect: false,
+                        pager: "#jqGridPager",
+                        jsonReader: {
+                            root: "page.list",
+                            page: "page.currPage",
+                            total: "page.totalPage",
+                            records: "page.totalCount"
+                        },
+                        prmNames: {
+                            page: "page",
+                            rows: "limit",
+                            order: "order"
+                        },
+                        gridComplete: function () {
+                            //隐藏grid底部滚动条
+                            $("#jqGrid").closest(".ui-jqgrid-bdiv").css({"overflow-x": "hidden"});
+                        }
+                    });
+                    // 重新加载数据
+                    $("#jqGrid").jqGrid('clearGridData');
+                    $("#jqGrid").jqGrid('setGridParam', {
+                        url: '../sys/log/list',
+                        datatype: "json",
+                        page: 1
+                    }).trigger("reloadGrid");
+                });
+            },
+            // 条件查询
+            conditionalQuery: function (event) {
+                $(function () {
+                    $("#jqGrid").jqGrid({
+                        url: '../sys/log/condition',
+                        datatype: "json",
+                        postData: {operation: vm.operation},
+                        colModel: [
+                            {label: 'id', name: 'id', width: 30, key: true},
+                            {label: '用户名', name: 'username', width: 50},
+                            {label: '用户操作', name: 'operation', width: 70, align: 'center'},
+                            {label: '请求方法', name: 'method', width: 150},
+                            {label: '请求参数', name: 'params', width: 80},
+                            {label: '执行时长(毫秒)', name: 'time', width: 80},
+                            {label: 'IP地址', name: 'ip', width: 70},
+                            {label: '创建时间', name: 'createDate', width: 90}
+                        ],
+                        viewrecords: true,
+                        height: 385,
+                        width: 800,
+                        rowNum: 10,
+                        rowList: [10, 30, 50],
+                        rownumbers: true,
+                        rownumWidth: 25,
+                        autowidth: true,
+                        multiselect: false,
+                        pager: "#jqGridPager",
+                        jsonReader: {
+                            root: "page.list",
+                            page: "page.currPage",
+                            total: "page.totalPage",
+                            records: "page.totalCount"
+                        },
+                        prmNames: {
+                            page: "page",
+                            rows: "limit",
+                            order: "order"
+                        },
+                        gridComplete: function () {
+                            //隐藏grid底部滚动条
+                            $("#jqGrid").closest(".ui-jqgrid-bdiv").css({"overflow-x": "hidden"});
+                        }
+                    });
+                    // 重新加载数据
+                    $("#jqGrid").jqGrid('clearGridData');
+                    $("#jqGrid").jqGrid('setGridParam', {
+                        url: '../sys/log/condition',
+                        datatype: "json",
+                        postData: {operation: vm.operation},
+                        page: 1
+                    }).trigger("reloadGrid");
+                });
+            },
+            // 时间段查询
+            dateQuery: function (event) {
+                // 时间段判断.
+                   if(vm.startDate==null||vm.startDate==''){
+                       layer.open({
+                           type: 0,
+                           title: '日志信息错误提示!',
+                           content: '开始时间不能为空哟!'
+                       });
+                       return ;
+                   }
+                   if(vm.endDate==null||vm.endDate==''){
+                       layer.open({
+                           type: 0,
+                           title: '日志信息错误提示!',
+                           content: '截止时间不能为空哟!'
+                       });
+                       return ;
+                   }
+                $(function () {
+                    $("#jqGrid").jqGrid({
+                        url: '../sys/log/date',
+                        datatype: "json",
+                        postData: {startDate: vm.startDate, endDate: vm.endDate},
+                        colModel: [
+                            {label: 'id', name: 'id', width: 30, key: true},
+                            {label: '用户名', name: 'username', width: 50},
+                            {label: '用户操作', name: 'operation', width: 70, align: 'center'},
+                            {label: '请求方法', name: 'method', width: 150},
+                            {label: '请求参数', name: 'params', width: 80},
+                            {label: '执行时长(毫秒)', name: 'time', width: 80},
+                            {label: 'IP地址', name: 'ip', width: 70},
+                            {label: '创建时间', name: 'createDate', width: 90}
+                        ],
+                        viewrecords: true,
+                        height: 385,
+                        width: 800,
+                        rowNum: 10,
+                        rowList: [10, 30, 50],
+                        rownumbers: true,
+                        rownumWidth: 25,
+                        autowidth: true,
+                        multiselect: false,
+                        pager: "#jqGridPager",
+                        jsonReader: {
+                            root: "page.list",
+                            page: "page.currPage",
+                            total: "page.totalPage",
+                            records: "page.totalCount"
+                        },
+                        prmNames: {
+                            page: "page",
+                            rows: "limit",
+                            order: "order"
+                        },
+                        gridComplete: function () {
+                            //隐藏grid底部滚动条
+                            $("#jqGrid").closest(".ui-jqgrid-bdiv").css({"overflow-x": "hidden"});
+                        }
+                    });
+                    // 重新加载数据
+                    $("#jqGrid").jqGrid('clearGridData');
+                    $("#jqGrid").jqGrid('setGridParam', {
+                        url: '../sys/log/date',
+                        datatype: "json",
+                        postData: {startDate: vm.startDate, endDate: vm.endDate},
+                        page: 1
+                    }).trigger("reloadGrid");
+                });
+            }
+        }
+    });
+</script>
 </body>
 </html>
