--- a/src/main/resources/templates/assets/search.html
+++ b/src/main/resources/templates/assets/search.html
@@ -39,7 +39,7 @@
             </div>
             <a class="btn btn-primary" @click="conditionalQuery"><i class="fa fa-search"></i>条件查询</a>
             &nbsp;&nbsp;&nbsp;&nbsp;
-            <a class="btn btn-primary" @click="query"><i class="fa fa-search"></i>查询全部</a>
+            <a class="btn btn-primary" @click="query"><i class="fa fa-search"></i>全部资产</a>
             &nbsp;&nbsp;&nbsp;&nbsp;
             <input type="text" name="date" class="logDate" id="startDate"  v-model="startDate" placeholder="请选择开始时间">
             &nbsp;&nbsp;&nbsp;&nbsp;
