--- a/src/main/resources/templates/assets/update.html
+++ b/src/main/resources/templates/assets/update.html
@@ -25,9 +25,8 @@
 <body>
 <div id="assetsUpdate" v-cloak>
     <div class="grid-btn">
-        <div class="form-group col-sm-2">
-            <input type="text" class="form-control" v-model="assInforName"  placeholder="根据资产名称查询">
-        </div>
+        <a class="btn btn-primary" @click="query"><i class="fa fa-search"></i>全部资产</a>
+        &nbsp;&nbsp;&nbsp;&nbsp;
         <a class="btn btn-primary" @click="update"><i class="fa fa-pencil-square-o"></i>&nbsp;修改资产</a>
     </div>
     <hr style="border:1px solid lightseagreen;border-radius: 5px;"/>
@@ -67,10 +66,10 @@
             <div class="form-group">
                 <div class="col-sm-2 control-label">资产状态</div>
                 <label class="radio-inline">
-                    <input type="radio" name="status" value="1" v-model="assInforStatus"/> 可用
+                    <input type="radio"  value="1" v-model="assInforStatus"/> 可用
                 </label>
                 <label class="radio-inline">
-                    <input type="radio" name="status" value="0" v-model="assInforStatus"/> 弃用
+                    <input type="radio"  value="0" v-model="assInforStatus"/> 弃用
                 </label>
             </div>
             <div class="form-group">
@@ -82,7 +81,7 @@
             <div class="form-group">
                 <div class="col-sm-2 control-label">新增时间</div>
                 <div class="col-sm-10">
-                    <input id="createTime" type="text" class="form-control" v-model="createTime" placeholder="请选择资产新增时间"/>
+                    <input id="createTime" type="text" disabled="true" class="form-control" v-model="createTime" placeholder="请选择资产新增时间" />
                 </div>
             </div>
             <div class="form-group">
@@ -98,12 +97,20 @@
             </div>
         </form>
     </div>
+    <div>
+    <!-- 查询结果表格-->
+    <table id="jqGrid" class="table table-striped" style="text-align: center;">
+        <div id="jqGridPager"></div>
+    </table>
+    </div>
 </div>
 <script>
+
     var vm=new Vue({
        el: "#assetsUpdate",
        data:{
            showPanel:false,
+           assInforId:'',
            largeCategory: '',
            smallCategory: '',
            assInforPrice: '',
@@ -114,26 +121,128 @@
            createTime:'',
            updateTime:''
        },
+        mounted(){
+            var mountedTime = this;
+            laydate.render({
+                elem: '#createTime',
+                type: 'datetime',
+                // 控件选择完毕后的回调函数
+                done: function(createTime){
+                    mountedTime.createTime=createTime;
+                }
+            });
+            laydate.render({
+                elem: '#updateTime',
+                type: 'datetime',
+                done: function(updateTime){
+                    mountedTime.updateTime=updateTime;
+                }
+            });
+        },
        methods:{
+           query: function (event) {
+               // 使用前端分页插件jqGrid来实现查询.
+               $(function () {
+                   $("#jqGrid").jqGrid({
+                       url: '../assets/search/list',
+                       datatype: "json",
+                       colModel: [
+                           {label: 'id', name: 'assInforId', width: 30, key: true},
+                           {label: '资产大类', name: 'largeCategory', width: 50},
+                           {label: '资产小类', name: 'smallCategory', width: 50},
+                           {label: '资产名称', name: 'assInforName', width: 64},
+                           {label: '资产数量(个)', name: 'assInforNum', width: 54},
+                           {label: '资产单价(元)', name: 'assInforPrice', width: 54},
+                           {label: '资产备注', name: 'assInforRemark', width: 64},
+                           {label: '资产状态', name: 'assInforStatus', width: 40,formatter: function(value, options, row){
+                                   return value ===0 ?
+                                       '<span class="label label-danger">弃用</span>' :
+                                       '<span class="label label-success">可用</span>';}},
+                           {label: '新增时间', name: 'assCreateTime', width: 90},
+                           {label: '更新时间', name: 'assUpdateTime', width: 90}
+                       ],
+                       viewrecords: true,
+                       height: 385,
+                       width: 800,
+                       rowNum: 10,
+                       rowList: [10, 30, 50],
+                       rownumbers: true,
+                       rownumWidth: 25,
+                       autowidth: true,
+                       multiselect: true,
+                       pager: "#jqGridPager",
+                       jsonReader: {
+                           root: "page.list",
+                           page: "page.currPage",
+                           total: "page.totalPage",
+                           records: "page.totalCount"
+                       },
+                       prmNames: {
+                           page: "page",
+                           rows: "limit",
+                           order: "order"
+                       },
+                       gridComplete: function () {
+                           //隐藏grid底部滚动条
+                           $("#jqGrid").closest(".ui-jqgrid-bdiv").css({"overflow-x": "hidden"});
+                       }
+                   });
+                   // 重新加载数据
+                   $("#jqGrid").jqGrid('clearGridData');
+                   $("#jqGrid").jqGrid('setGridParam', {
+                       url: '../assets/search/list',
+                       datatype: "json",
+                       page: 1
+                   }).trigger("reloadGrid");
+               });
+           },
            update:function(event){
                 vm.showPanel=!(vm.showPanel);
+                // 根据选中的id
+                var assInforId=getSelectedRow();
+                // 获取选中这一行的数据,Vue数据绑定.
+                var rowData = $("#jqGrid").jqGrid('getRowData',assInforId);
+                vm.assInforId=rowData.assInforId;
+                vm.largeCategory=rowData.largeCategory;
+                vm.smallCategory=rowData.smallCategory;
+                vm.assInforPrice=rowData.assInforPrice;
+                vm.assInforNum=rowData.assInforNum;
+                vm.assInforName=rowData.assInforName;
+                vm.assInforRemark=rowData.assInforRemark;
+                vm.createTime=rowData.assCreateTime;
+                vm.updateTime=rowData.assUpdateTime;
+           },
+           save:function(event){
+                // Ajax根据id更新数据.
                 $.ajax({
-                    type:"POST",
-                    url:"../assets/search/name",
-                    dataType:"JSON",
-                    contentType:"application/json;charset=utf-8",
-                    data:JSON.stringify({"assInforName":vm.assInforName}),
-                    success:function(assetsInfo){
-                       // 得到后端返回的数据,Vue渲染.
-                       console.log(assetsInfo);
+                   type: "POST",
+                   url: "../assets/update/assets",
+                   dataType: "JSON",
+                   data: JSON.stringify({"assInforId":vm.assInforId,"largeCategory":vm.largeCategory,"smallCategory":vm.smallCategory,"assInforPrice":vm.assInforPrice,
+                   "assInforNum":vm.assInforNum,"assInforName":vm.assInforName,
+                   "assInforRemark":vm.assInforRemark,"updateTime":vm.updateTime}),
+                   contentType:"application/json;charset=utf-8",
+                   success: function(result){
+                       if(result.code==0){
+                           layer.open({
+                               type: 0,
+                               title: '资产更新提示信息!',
+                               content: '更新资产信息成功!'
+                           });
+                           vm.showPanel=!(vm.showPanel);
+                       }else{
+                           layer.open({
+                               type: 0,
+                               title: '资产更新提示信息!',
+                               content: result.msg
+                           });
+                           vm.showPanel=!(vm.showPanel);
+                       }
                    }
                 });
            },
-           save:function(event){
-
-           },
            reset:function(event){
-
+               vm.showPanel=!(vm.showPanel);
            }
        }
     });
