--- a/src/main/resources/templates/500.html
+++ b/src/main/resources/templates/500.html
@@ -3,10 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <title>【500页面】</title>
+    <style type="text/css">
+          #error{
+              top:200px;
+          }
+    </style>
 </head>
 <body>
-     <div align="center">
-            <h3>系统发生500错误,请下面联系管理员!</h3>
+     <div id="error" align="center">
+            <h3>非常抱歉呐,系统发生500错误了,请下面联系管理员!</h3>
      </div>
 </body>
 </html>
