--- a/src/main/resources/templates/assets/category.html
+++ b/src/main/resources/templates/assets/category.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" th:href="@{/css/main.css}">
     <link rel="stylesheet" th:href="@{/plugins/layDate-v5.0.9/laydate/layui.css}">
     <script th:src="@{/libs/jquery.min.js}"></script>
+    <script th:src="@{/libs/highcharts.js}"></script>
     <script th:src="@{/plugins/layer/layer.js}"></script>
     <script th:src="@{/libs/bootstrap.min.js}"></script>
     <script th:src="@{/libs/vue.min.js}"></script>
@@ -28,9 +29,12 @@
             <a class="btn btn-primary" @click="largeQuery"><i class="fa fa-search"></i>全部类目查询</a>
             &nbsp;&nbsp;&nbsp;&nbsp;
             <a class="btn btn-primary" @click="addCategory"><i class="fa fa-plus"></i>新增类目</a>
+            &nbsp;&nbsp;&nbsp;&nbsp;
+            <a class="btn btn-primary" @click="chartShow"><i class="fa fa-map" aria-hidden="true">类目图表</i></a>
         </div>
+    </div>
             <hr style="border:1px solid lightseagreen;border-radius: 5px;"/>
-        <div v-show="showPanel" class="panel panel-default">
+        <div v-show="showPanel" id="showPanel" class="panel panel-default">
             <div class="panel-heading">{{title}}</div>
             <form class="form-horizontal" >
                 <div class="form-group">
@@ -73,12 +77,12 @@
                 </div>
             </form>
             </div>
+    <div id="container" style="width: 550px; height: 450px; margin: 0 auto"></div>
         <!-- 查询结果表格-->
         <table id="jqGrid" class="table table-striped" style="text-align: center;">
             <div id="jqGridPager"></div>
         </table>
     </div>
-</div>
       <script>
           var vm = new Vue({
               el: '#assetsCategory',
@@ -110,6 +114,74 @@
                   });
               },
               methods: {
+                  chartShow: function(event) {
+                     var chart = new Highcharts.Chart({
+                          //常规图表选项设置
+                          chart: {
+                              renderTo: 'container',        //在哪个区域呈现，对应HTML中的一个元素ID
+                              plotBackgroundColor: null,    //绘图区的背景颜色
+                              plotBorderWidth: null,        //绘图区边框宽度
+                              plotShadow: false            //绘图区是否显示阴影
+                          },
+                         // 禁用HighCharts的版权
+                          credits: {
+                             enabled: false
+                          },
+                         //图表的主标题
+                          title: {
+                              text: '臻善企业信息管理系统资产类目展示图表',
+                              style: {
+                                  color: "#A52A2A",
+                                  fontSize: "20px",
+                                  fontWeight: "bold"
+                              }
+                          },
+                          //当鼠标经过时的提示设置
+                          tooltip: {
+                              pointFormat: '{series.name}: <b>{point.percentage:.1f}%</b>',
+                              percentageDecimals: 1
+                          },
+                          //每种图表类型属性设置
+                          plotOptions: {
+                              //饼状图
+                              pie: {
+                                  allowPointSelect: true,
+                                  cursor: 'pointer',
+                                  dataLabels: {
+                                      enabled: true,
+                                      color: '#000000',
+                                      connectorColor: '#000000',
+                                      formatter: function() {
+                                          //Highcharts.numberFormat(this.percentage,2)格式化数字，保留2位精度
+                                          return '<b>'+ this.point.name +'</b>: '+Highcharts.numberFormat(this.percentage,2) +' %';
+                                      }
+                                  },
+                                  // 展示颜色图例
+                                  showInLegend: true
+                              }
+                          },
+                          //图表要展现的数据
+                          series: [{
+                              type: 'pie',
+                              name: '占比'
+                          }]
+                      });
+                         $.ajax({
+                             type:"POST" ,
+                             url:"../assets/charts/assets",
+                             dataType:"JSON",
+                             success:function(data){
+                                 // 定义一个存储结果数组
+                                 var largeCategory=[];
+                                 // 遍历List对象
+                                 $.each(data, function(i, assetsList){
+                                     largeCategory.push([assetsList.largeCategory,assetsList.categoryCount]);
+                                 });
+                                 // 填充数据.
+                                 chart.series[0].setData(largeCategory);
+                             }
+                         });
+                  },
                   largeQuery: function(event){
                       // 使用前端分页插件jqGrid来实现查询.
                       $(function () {
@@ -198,7 +270,6 @@
                   reset: function(event){
                       vm.showPanel=!(vm.showPanel);
                   }
-
               }
           })
       </script>
